--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,14 +1,15 @@
-name: linter
+# name: linter
 
-on:
-  push:
-    branches:
-      - develop
-      - main
-  pull_request:
-    branches:
-      - develop
-      - main
+# Temporarily disabled - uncomment to re-enable
+# on:
+#   push:
+#     branches:
+#       - develop
+#       - main
+#   pull_request:
+#     branches:
+#       - develop
+#       - main
 
 permissions:
   contents: write
@@ -30,10 +31,10 @@ jobs:
           npm install
 
       - name: Run Pint
-        run: vendor/bin/pint
+        run: vendor/bin/pint --test
 
       - name: Format Frontend
-        run: npm run format
+        run: npm run format:check
 
       - name: Lint Frontend
         run: npm run lint
