--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,14 +1,15 @@
-name: tests
+# name: tests
 
-on:
-  push:
-    branches:
-      - develop
-      - main
-  pull_request:
-    branches:
-      - develop
-      - main
+# Temporarily disabled - uncomment to re-enable
+# on:
+#   push:
+#     branches:
+#       - develop
+#       - main
+#   pull_request:
+#     branches:
+#       - develop
+#       - main
 
 jobs:
   ci:
@@ -47,4 +48,4 @@ jobs:
         run: php artisan key:generate
 
       - name: Tests
-        run: ./vendor/bin/pest
+        run: php artisan test
